# myApp

./: CMakeLists.txt  main.cpp
Adapter-object/: OAdaptee.cpp  OAdaptee.h  OAdapter.cpp  OAdapter.h  OTarget.cpp  OTarget.h
AdapterPatter/: Adaptee.cpp  Adaptee.h  Adapter.cpp  Adapter.h  Target.cpp  Target.h
StatePatten/: ConcreteState.cpp  ConcreteState.h  ConcreteStateA.cpp  ConcreteStateA.h  Context.cpp  Context.h  State.cpp  State.h
